--- a/gstreamer/po/pt_BR.po
+++ b/gstreamer/po/pt_BR.po
@@ -15,10 +15,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: gstreamer-0.10.21.3\n"
+"Project-Id-Version: gstreamer-0.10.22.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-04-15 22:25+0100\n"
-"PO-Revision-Date: 2009-01-17 11:59-0200\n"
+"POT-Creation-Date: 2009-04-21 20:49+0100\n"
+"PO-Revision-Date: 2009-04-16 21:51-0300\n"
 "Last-Translator: Fabrício Godoy <skarllot@gmail.com>\n"
 "Language-Team: Brazilian Portuguese <ldp-br@bazar.conectiva.com.br>\n"
 "MIME-Version: 1.0\n"
@@ -375,12 +375,11 @@ msgstr ""
 "A origem da mídia como um URI (localização onde o arquivo ou fluxo original "
 "está hospedado)"
 
-#, fuzzy
 msgid "homepage"
-msgstr "imagem"
+msgstr "página inicial"
 
 msgid "Homepage for this media (i.e. artist or movie homepage)"
-msgstr ""
+msgstr "Página inicial desta mídia (página inicial do artista ou filme)"
 
 msgid "description"
 msgstr "descrição"
@@ -471,13 +470,11 @@ msgstr "CODEC de áudio"
 msgid "codec the audio data is stored in"
 msgstr "CODEC de áudio usado nos dados"
 
-#, fuzzy
 msgid "subtitle codec"
-msgstr "CODEC de vídeo"
+msgstr "CODEC de legenda"
 
-#, fuzzy
 msgid "codec the subtitle data is stored in"
-msgstr "CODEC de vídeo usado nos dados"
+msgstr "CODEC de legenda usado nos dados"
 
 msgid "bitrate"
 msgstr "taxa de bits"
@@ -707,9 +704,8 @@ msgid ""
 "Restrict the possible allowed capabilities (NULL means ANY). Setting this "
 "property takes a reference to the supplied GstCaps object."
 msgstr ""
-"Restrinja as possíveis capacidades permitidas (NULO significa TODAS). "
-"Definindo essa propriedade é levada uma referência ao objeto GstCaps "
-"fornecido."
+"Restrinja as possíveis capacidades permitidas (NULL = ANY). Definindo essa "
+"propriedade é levada uma referência ao objeto GstCaps fornecido."
 
 #, c-format
 msgid "Error while writing to file descriptor \"%d\"."
@@ -848,9 +844,8 @@ msgstr ""
 "ERRO: nenhum elemento de nível superior na fila de processamento do arquivo "
 "\"%s\".\n"
 
-#, fuzzy
 msgid "WARNING: only one toplevel element is supported at this time.\n"
-msgstr "AVISO: apenas um elemento de nível superior é suportado atualmente."
+msgstr "AVISO: atualmente há suporte apenas a um elemento de nível superior.\n"
 
 #, c-format
 msgid "ERROR: could not parse command line argument %d: %s.\n"
@@ -866,7 +861,7 @@ msgstr "Obtida mensagem #%"
 
 #, c-format
 msgid "Got EOS from element \"%s\".\n"
-msgstr "Chegou ao final do fluxo do elemento \"%s\".\n"
+msgstr "Obtido o final do fluxo do elemento \"%s\".\n"
 
 #, c-format
 msgid "FOUND TAG      : found by element \"%s\".\n"
@@ -904,7 +899,7 @@ msgstr "Redistribuição de latência...\n"
 
 #, c-format
 msgid "Setting state to %s as requested by %s...\n"
-msgstr ""
+msgstr "Definindo estado de %s como requerido por %s...\n"
 
 msgid "Interrupt: Stopping pipeline ...\n"
 msgstr "Interrupção: Parando a fila de processamento...\n"
@@ -915,9 +910,8 @@ msgstr "Exibir etiquetas (metadados)"
 msgid "Output status information and property notifications"
 msgstr "Exibir informações do estado e notificações de propriedade"
 
-#, fuzzy
 msgid "Do not print any progress information"
-msgstr "Não é possível obter informações do estado de saída do TIPO"
+msgstr "Não imprimir nenhuma informação de progresso"
 
 msgid "Output messages"
 msgstr "Exibir mensagens"
@@ -943,6 +937,8 @@ msgstr "Exibir trilha de alocação (se habilitado na compilação)"
 
 msgid "Force EOS on sources before shutting the pipeline down"
 msgstr ""
+"Forçar finalização do fluxo nos elementos fonte antes de desligar a fila de "
+"processamento"
 
 #, c-format
 msgid "ERROR: pipeline could not be constructed: %s.\n"
@@ -956,7 +952,7 @@ msgid "WARNING: erroneous pipeline: %s\n"
 msgstr "AVISO: fila de processamento com erros: %s\n"
 
 msgid "ERROR: the 'pipeline' element wasn't found.\n"
-msgstr "ERRO: o elemento da \"fila de processamento\" não foi encontrado.\n"
+msgstr "ERRO: o elemento de \"fila de processamento\" não foi encontrado.\n"
 
 msgid "Setting pipeline to PAUSED ...\n"
 msgstr "Definindo a fila de processamento para PAUSADO...\n"
@@ -985,16 +981,17 @@ msgstr "ERRO: a fila de processamento não quer reproduzir.\n"
 
 msgid "EOS on shutdown enabled -- Forcing EOS on the pipeline\n"
 msgstr ""
+"Finalizar fluxo ao desligar habilitado -- Forçando finalização do fluxo na "
+"fila de processamento\n"
 
 msgid "Waiting for EOS...\n"
-msgstr ""
+msgstr "Esperando pelo final do fluxo...\n"
 
-#, fuzzy
 msgid "EOS received - stopping pipeline...\n"
-msgstr "Interrupção: Parando a fila de processamento...\n"
+msgstr "Final do fluxo recebido - parando a fila de processamento...\n"
 
 msgid "An error happened while waiting for EOS\n"
-msgstr ""
+msgstr "Um erro ocorreu ao esperar pelo final do fluxo\n"
 
 msgid "Execution ended after %"
 msgstr "Execução finalizada depois de %"
@@ -1005,9 +1002,8 @@ msgstr "Definindo a fila de processamento para PRONTO...\n"
 msgid "Setting pipeline to NULL ...\n"
 msgstr "Definindo a fila de processamento para NULO...\n"
 
-#, fuzzy
 msgid "Freeing pipeline ...\n"
-msgstr "Definindo a fila de processamento para NULO...\n"
+msgstr "Liberando a fila de processamento...\n"
 
 #~ msgid "FREEING pipeline ...\n"
 #~ msgstr "LIBERANDO a fila de processamento...\n"
