--- a/gstreamer/po/fi.po
+++ b/gstreamer/po/fi.po
@@ -10,10 +10,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: gstreamer 0.10.21.3\n"
+"Project-Id-Version: gstreamer 0.10.22.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-04-15 22:25+0100\n"
-"PO-Revision-Date: 2009-01-18 15:50+0200\n"
+"POT-Creation-Date: 2009-04-21 20:49+0100\n"
+"PO-Revision-Date: 2009-04-19 21:15+0300\n"
 "Last-Translator: Tommi Vainikainen <Tommi.Vainikainen@iki.fi>\n"
 "Language-Team: Finnish <translation-team-fi@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
@@ -363,12 +363,11 @@ msgstr ""
 "Median alkuperä URI-muodossa (sijainti, jossa alkuperäinen tiedosto tai "
 "virta on tarjolla)"
 
-#, fuzzy
 msgid "homepage"
-msgstr "kuva"
+msgstr "kotisivu"
 
 msgid "Homepage for this media (i.e. artist or movie homepage)"
-msgstr ""
+msgstr "Tämän median kotisivu (eism. artistin tai elokuvan kotisivu)"
 
 msgid "description"
 msgstr "kuvaus"
@@ -459,13 +458,11 @@ msgstr "äänikoodekki"
 msgid "codec the audio data is stored in"
 msgstr "koodekki, jolla äänidata on tallennettu"
 
-#, fuzzy
 msgid "subtitle codec"
-msgstr "videokoodekki"
+msgstr "tekstityskoodekki"
 
-#, fuzzy
 msgid "codec the subtitle data is stored in"
-msgstr "koodekki, jolla videodata on tallennettu"
+msgstr "koodekki, jolla tekstitystiedot on tallennettu"
 
 msgid "bitrate"
 msgstr "bittinopeus"
@@ -835,9 +832,8 @@ msgstr "VIRHE: XML-tiedoston \"%s\" jäsentäminen epäonnistui.\n"
 msgid "ERROR: no toplevel pipeline element in file '%s'.\n"
 msgstr "VIRHE: päätason liukuhihnaelementtiä ei ole tiedostossa \"%s\".\n"
 
-#, fuzzy
 msgid "WARNING: only one toplevel element is supported at this time.\n"
-msgstr "VAROITUS: vain yhtä päätason elementtiä tuetaan tällä kertaa."
+msgstr "VAROITUS: vain yhtä päätason elementtiä tuetaan tällä kertaa.\n"
 
 #, c-format
 msgid "ERROR: could not parse command line argument %d: %s.\n"
@@ -887,7 +883,7 @@ msgstr "Uudelleenjaa latenssi...\n"
 
 #, c-format
 msgid "Setting state to %s as requested by %s...\n"
-msgstr ""
+msgstr "Asetetaan tilaan %s kuten %s pyysi...\n"
 
 msgid "Interrupt: Stopping pipeline ...\n"
 msgstr "Keskeytys: Pysäytetään liukuhihna ...\n"
@@ -898,9 +894,8 @@ msgstr "Tulostemerkinnät (tunnetaan myös metadatana)"
 msgid "Output status information and property notifications"
 msgstr "Tulostetilatiedot ja ominaisuushuomiot"
 
-#, fuzzy
 msgid "Do not print any progress information"
-msgstr "Älä tulosta tilatietoa TYYPPI"
+msgstr "Älä tulosta mitään edistymistietoa"
 
 msgid "Output messages"
 msgstr "Tulosteviestit"
@@ -924,7 +919,7 @@ msgid "Print alloc trace (if enabled at compile time)"
 msgstr "Tulosta varausjälki (jos valittu käännöksen yhteydessä)"
 
 msgid "Force EOS on sources before shutting the pipeline down"
-msgstr ""
+msgstr "Pakota virran-loppu lähteille ennen liukuhihan sammuttamista"
 
 #, c-format
 msgid "ERROR: pipeline could not be constructed: %s.\n"
@@ -966,16 +961,17 @@ msgstr "VIRHE: Liukuhihna ei halua toistaa.\n"
 
 msgid "EOS on shutdown enabled -- Forcing EOS on the pipeline\n"
 msgstr ""
+"Virran-loppu sammutettaessa käytössä -- pakotetaan virran-loppu "
+"liukuhihnalle\n"
 
 msgid "Waiting for EOS...\n"
-msgstr ""
+msgstr "Odotetaan virran loppua...\n"
 
-#, fuzzy
 msgid "EOS received - stopping pipeline...\n"
-msgstr "Keskeytys: Pysäytetään liukuhihna ...\n"
+msgstr "Virran-loppu vastaanotettu - pysäytetään liukuhihna...\n"
 
 msgid "An error happened while waiting for EOS\n"
-msgstr ""
+msgstr "Tapahtui virhe odotettaessa virran-loppua\n"
 
 msgid "Execution ended after %"
 msgstr "Suoritus päättyi jälkeen %"
@@ -986,9 +982,8 @@ msgstr "Asetetaan liukuhihna tilaan VALMIS...\n"
 msgid "Setting pipeline to NULL ...\n"
 msgstr "Asetetaan liukuhihna tilaan TYHJÄ...\n"
 
-#, fuzzy
 msgid "Freeing pipeline ...\n"
-msgstr "Asetetaan liukuhihna tilaan TYHJÄ...\n"
+msgstr "Vapautetaan liukuhihna...\n"
 
 #~ msgid "FREEING pipeline ...\n"
 #~ msgstr "VAPAUTETAAN liukuhihna...\n"
