--- a/gstreamer/po/id.po
+++ b/gstreamer/po/id.po
@@ -4,10 +4,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: gstreamer 0.10.21.3\n"
+"Project-Id-Version: gstreamer 0.10.22.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-04-15 22:25+0100\n"
-"PO-Revision-Date: 2009-01-13 21:05+0700\n"
+"POT-Creation-Date: 2009-04-21 20:49+0100\n"
+"PO-Revision-Date: 2009-04-18 20:31+0700\n"
 "Last-Translator: Andhika Padmawan <andhika.padmawan@gmail.com>\n"
 "Language-Team: Indonesian <translation-team-id@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
@@ -361,12 +361,11 @@ msgstr ""
 "Asal media dalam bentuk URI (lokasi, dimana berkas asal atau arus "
 "ditempatkan)"
 
-#, fuzzy
 msgid "homepage"
-msgstr "citra"
+msgstr "laman"
 
 msgid "Homepage for this media (i.e. artist or movie homepage)"
-msgstr ""
+msgstr "Laman untuk media ini (misalnya laman artis atau film)"
 
 msgid "description"
 msgstr "keterangan"
@@ -456,13 +455,11 @@ msgstr "codec audio"
 msgid "codec the audio data is stored in"
 msgstr "codec data audio tersimpan"
 
-#, fuzzy
 msgid "subtitle codec"
-msgstr "codec video"
+msgstr "codec subjudul"
 
-#, fuzzy
 msgid "codec the subtitle data is stored in"
-msgstr "codec data video tersimpan"
+msgstr "codec data subjudul tersimpan di"
 
 msgid "bitrate"
 msgstr "bitrasi"
@@ -826,9 +823,9 @@ msgstr "GALAT: penguraian berkas xml '%s' gagal.\n"
 msgid "ERROR: no toplevel pipeline element in file '%s'.\n"
 msgstr "GALAT: tak ada elemen baris pipa level atas di berkas '%s'.\n"
 
-#, fuzzy
 msgid "WARNING: only one toplevel element is supported at this time.\n"
-msgstr "PERINGATAN: hanya satu elemen level atas yang didukung pada saat ini."
+msgstr ""
+"PERINGATAN: hanya satu elemen level atas yang didukung pada saat ini.\n"
 
 #, c-format
 msgid "ERROR: could not parse command line argument %d: %s.\n"
@@ -878,7 +875,7 @@ msgstr "Mendistribusikan ulang latency...\n"
 
 #, c-format
 msgid "Setting state to %s as requested by %s...\n"
-msgstr ""
+msgstr "Mengatur tingkat ke %s seperti diminta oleh %s...\n"
 
 msgid "Interrupt: Stopping pipeline ...\n"
 msgstr "Interupsi: Menghentikan baris pipa ...\n"
@@ -889,9 +886,8 @@ msgstr "Tag keluaran (juga dikenal sebagai metadata)"
 msgid "Output status information and property notifications"
 msgstr "Informasi status keluaran dan pemberitahuan properti"
 
-#, fuzzy
 msgid "Do not print any progress information"
-msgstr "Jangan keluarkan informasi status dari TIPE"
+msgstr "Jangan cetak informasi proses"
 
 msgid "Output messages"
 msgstr "Pesan keluaran"
@@ -915,7 +911,7 @@ msgid "Print alloc trace (if enabled at compile time)"
 msgstr "Cetak jejak alokasi (jika diaktifkan sewaktu kompilasi)"
 
 msgid "Force EOS on sources before shutting the pipeline down"
-msgstr ""
+msgstr "Paksa EOS pada sumber sebelum mematikan pemipaan"
 
 #, c-format
 msgid "ERROR: pipeline could not be constructed: %s.\n"
@@ -956,17 +952,16 @@ msgid "ERROR: pipeline doesn't want to play.\n"
 msgstr "GALAT: baris pipa tidak ingin diputar.\n"
 
 msgid "EOS on shutdown enabled -- Forcing EOS on the pipeline\n"
-msgstr ""
+msgstr "EOS pada matikan diaktifkan -- Paksa EOS pada pemipaan\n"
 
 msgid "Waiting for EOS...\n"
-msgstr ""
+msgstr "Menunggu untuk EOS...\n"
 
-#, fuzzy
 msgid "EOS received - stopping pipeline...\n"
-msgstr "Interupsi: Menghentikan baris pipa ...\n"
+msgstr "EOS diterima - menghentikan baris pipa...\n"
 
 msgid "An error happened while waiting for EOS\n"
-msgstr ""
+msgstr "Galat terjadi ketika menunggu EOS\n"
 
 msgid "Execution ended after %"
 msgstr "Eksekusi berakhir setelah %"
@@ -977,9 +972,8 @@ msgstr "Mengatur baris pipa ke SIAP ...\n"
 msgid "Setting pipeline to NULL ...\n"
 msgstr "Mengatur baris pipa ke KOSONG ...\n"
 
-#, fuzzy
 msgid "Freeing pipeline ...\n"
-msgstr "Mengatur baris pipa ke KOSONG ...\n"
+msgstr "Membebaskan baris pipa ...\n"
 
 #~ msgid "FREEING pipeline ...\n"
 #~ msgstr "MEMBEBASKAN baris pipa...\n"
