--- a/gstreamer/po/pl.po
+++ b/gstreamer/po/pl.po
@@ -4,10 +4,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: gstreamer 0.10.21.3\n"
+"Project-Id-Version: gstreamer 0.10.22.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-04-15 22:25+0100\n"
-"PO-Revision-Date: 2009-01-12 20:09+0100\n"
+"POT-Creation-Date: 2009-04-21 20:49+0100\n"
+"PO-Revision-Date: 2009-04-16 21:46+0200\n"
 "Last-Translator: Jakub Bogusz <qboosh@pld-linux.org>\n"
 "Language-Team: Polish <translation-team-pl@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
@@ -359,12 +359,11 @@ msgstr ""
 "Pochodzenie utworu jako URI (położenie, gdzie trzymany jest oryginał pliku "
 "lub strumienia)"
 
-#, fuzzy
 msgid "homepage"
-msgstr "obrazek"
+msgstr "strona domowa"
 
 msgid "Homepage for this media (i.e. artist or movie homepage)"
-msgstr ""
+msgstr "Strona domowa tego utworu (artysty lub filmu)"
 
 msgid "description"
 msgstr "opis"
@@ -455,13 +454,11 @@ msgstr "kodek dźwięku"
 msgid "codec the audio data is stored in"
 msgstr "kodek użyty do zapisu danych dźwięku"
 
-#, fuzzy
 msgid "subtitle codec"
-msgstr "kodek obrazu"
+msgstr "kodek napisów"
 
-#, fuzzy
 msgid "codec the subtitle data is stored in"
-msgstr "kodek użyty do zapisu danych obrazu"
+msgstr "kodek użyty do zapisu danych napisów"
 
 msgid "bitrate"
 msgstr "prędkość bitowa"
@@ -832,9 +829,8 @@ msgstr "BŁĄD: analiza pliku xml '%s' nie powiodła się.\n"
 msgid "ERROR: no toplevel pipeline element in file '%s'.\n"
 msgstr "BŁĄD: brak głównego elementu potoku w pliku '%s'.\n"
 
-#, fuzzy
 msgid "WARNING: only one toplevel element is supported at this time.\n"
-msgstr "UWAGA: aktualnie obsługiwany jest tylko jeden element główny."
+msgstr "UWAGA: aktualnie obsługiwany jest tylko jeden element główny.\n"
 
 #, c-format
 msgid "ERROR: could not parse command line argument %d: %s.\n"
@@ -884,7 +880,7 @@ msgstr "Rozprzestrzenianie opóźnień...\n"
 
 #, c-format
 msgid "Setting state to %s as requested by %s...\n"
-msgstr ""
+msgstr "Ustawianie stanu na %s zgodnie z wymaganiem %s...\n"
 
 msgid "Interrupt: Stopping pipeline ...\n"
 msgstr "Przerwanie: Zatrzymywanie potoku...\n"
@@ -895,9 +891,8 @@ msgstr "Wypisanie znaczników (znanych także jako metadane)"
 msgid "Output status information and property notifications"
 msgstr "Wypisywanie informacji o stanie i powiadomień właściwości"
 
-#, fuzzy
 msgid "Do not print any progress information"
-msgstr "Nie wypisywanie informacji o stanie tego RODZAJU"
+msgstr "Nie wypisywanie żadnej informacji o postępie"
 
 msgid "Output messages"
 msgstr "Wypisywanie komunikatów"
@@ -921,7 +916,7 @@ msgid "Print alloc trace (if enabled at compile time)"
 msgstr "Wypisanie śladu alokacji (jeśli został włączony w czasie kompilacji)"
 
 msgid "Force EOS on sources before shutting the pipeline down"
-msgstr ""
+msgstr "Wymuszanie EOS na źródłach przed zamknięciem potoku"
 
 #, c-format
 msgid "ERROR: pipeline could not be constructed: %s.\n"
@@ -962,17 +957,16 @@ msgid "ERROR: pipeline doesn't want to play.\n"
 msgstr "BŁĄD: potok odmawia odtwarzania.\n"
 
 msgid "EOS on shutdown enabled -- Forcing EOS on the pipeline\n"
-msgstr ""
+msgstr "Włączony EOS przy wyłączaniu - wymuszanie EOS w potoku\n"
 
 msgid "Waiting for EOS...\n"
-msgstr ""
+msgstr "Oczekiwanie na EOS...\n"
 
-#, fuzzy
 msgid "EOS received - stopping pipeline...\n"
-msgstr "Przerwanie: Zatrzymywanie potoku...\n"
+msgstr "Otrzymano EOS - zatrzymywanie potoku...\n"
 
 msgid "An error happened while waiting for EOS\n"
-msgstr ""
+msgstr "Wystąpił błąd w trakcie oczekiwania na EOS\n"
 
 msgid "Execution ended after %"
 msgstr "Wykonywanie zakończone po %"
@@ -983,9 +977,5 @@ msgstr "Ustawianie potoku na GOTOWOŚĆ...\n"
 msgid "Setting pipeline to NULL ...\n"
 msgstr "Ustawianie potoku na NULL...\n"
 
-#, fuzzy
 msgid "Freeing pipeline ...\n"
-msgstr "Ustawianie potoku na NULL...\n"
-
-#~ msgid "FREEING pipeline ...\n"
-#~ msgstr "ZWALNIANIE potoku...\n"
+msgstr "Zwalnianie potoku...\n"
