--- a/gst-plugins-base/po/pt_BR.po
+++ b/gst-plugins-base/po/pt_BR.po
@@ -7,10 +7,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: gst-plugins-base-0.10.21.3\n"
+"Project-Id-Version: gst-plugins-base-0.10.22.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-04-15 23:00+0100\n"
-"PO-Revision-Date: 2009-01-17 12:21-0200\n"
+"POT-Creation-Date: 2009-04-21 20:53+0100\n"
+"PO-Revision-Date: 2009-04-16 21:03-0300\n"
 "Last-Translator: Fabrício Godoy <skarllot@gmail.com>\n"
 "Language-Team: Brazilian Portuguese <ldp-br@bazar.conectiva.com.br>\n"
 "MIME-Version: 1.0\n"
@@ -234,31 +234,28 @@ msgid "Both autoaudiosink and alsasink elements are missing."
 msgstr "Os elementos autoaudiosink e alsasink estão faltando."
 
 #: gst/playback/gstplaysink.c:962
-#, fuzzy
 msgid "Both autovideosink and xvimagesink elements are not working."
-msgstr "Os elementos autovideosink e xvimagesink estão faltando."
+msgstr "Os elementos autovideosink e xvimagesink não estão funcionando."
 
 #: gst/playback/gstplaysink.c:1078 gst/playback/gstplaysink.c:1235
 msgid "Custom text sink element is not usable."
-msgstr ""
+msgstr "O elemento consumidor personalizado de texto não é utilizável."
 
 #: gst/playback/gstplaysink.c:1469
 msgid "No volume control found"
 msgstr "Nenhum controle de volume encontrado"
 
 #: gst/playback/gstplaysink.c:1490
-#, fuzzy
 msgid "Both autoaudiosink and alsasink elements are not working."
-msgstr "Os elementos autoaudiosink e alsasink estão faltando."
+msgstr "Os elementos autoaudiosink e alsasink não estão funcionando."
 
 #: gst/playback/gstplaysink.c:1985
 msgid "Can't play a text file without video."
 msgstr "Não é possível reproduzir um arquivo de texto sem vídeo."
 
 #: gst/playback/gstplaysink.c:1993
-#, fuzzy
 msgid "Can't play a text subtitles and subpictures."
-msgstr "Não é possível reproduzir um arquivo de texto sem vídeo."
+msgstr "Não é possível reproduzir legendas de texto e subimagens."
 
 #: gst/playback/gstqueue2.c:1005
 msgid "No file name specified."
@@ -303,12 +300,12 @@ msgstr "Erro ao enviar dados para \"%s:%d\"."
 #: gst/tcp/gsttcp.c:555
 #, c-format
 msgid "Error while sending gdp header data to \"%s:%d\"."
-msgstr "Erro ao enviar o cabeçalho GDP de dados para \"%s:%d\"."
+msgstr "Erro ao enviar o cabeçalho de dados GDP para \"%s:%d\"."
 
 #: gst/tcp/gsttcp.c:564
 #, c-format
 msgid "Error while sending gdp payload data to \"%s:%d\"."
-msgstr "Erro ao enviar carga de dados GDP para \"%s:%d\"."
+msgstr "Erro ao enviar codificação de dados GDP para \"%s:%d\"."
 
 #: gst/tcp/gsttcpclientsink.c:399 gst/tcp/gsttcpclientsrc.c:382
 #, c-format
