--- a/gst-plugins-base/po/id.po
+++ b/gst-plugins-base/po/id.po
@@ -4,10 +4,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: gst-plugins-base 0.10.21.3\n"
+"Project-Id-Version: gst-plugins-base 0.10.22.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-04-15 23:00+0100\n"
-"PO-Revision-Date: 2009-01-13 21:12+0700\n"
+"POT-Creation-Date: 2009-04-21 20:53+0100\n"
+"PO-Revision-Date: 2009-04-18 20:34+0700\n"
 "Last-Translator: Andhika Padmawan <andhika.padmawan@gmail.com>\n"
 "Language-Team: Indonesian <translation-team-id@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
@@ -227,31 +227,28 @@ msgid "Both autoaudiosink and alsasink elements are missing."
 msgstr "Baik elemen autoaudiosink maupun alsasink hilang."
 
 #: gst/playback/gstplaysink.c:962
-#, fuzzy
 msgid "Both autovideosink and xvimagesink elements are not working."
-msgstr "Baik elemen autovideosink maupun xvimagesink hilang."
+msgstr "Baik elemen autovideosink maupun xvimagesink tidak bekerja."
 
 #: gst/playback/gstplaysink.c:1078 gst/playback/gstplaysink.c:1235
 msgid "Custom text sink element is not usable."
-msgstr ""
+msgstr "Elemen teks tenggelam suai tak dapat digunakan."
 
 #: gst/playback/gstplaysink.c:1469
 msgid "No volume control found"
 msgstr "Tak ada kontrol volume yang ditemukan"
 
 #: gst/playback/gstplaysink.c:1490
-#, fuzzy
 msgid "Both autoaudiosink and alsasink elements are not working."
-msgstr "Baik elemen autoaudiosink maupun alsasink hilang."
+msgstr "Baik elemen autoaudiosink maupun alsasink tidak bekerja."
 
 #: gst/playback/gstplaysink.c:1985
 msgid "Can't play a text file without video."
 msgstr "Tak dapat memutar berkas teks tanpa video."
 
 #: gst/playback/gstplaysink.c:1993
-#, fuzzy
 msgid "Can't play a text subtitles and subpictures."
-msgstr "Tak dapat memutar berkas teks tanpa video."
+msgstr "Tak dapat memutar teks subjudul dan subgambar."
 
 #: gst/playback/gstqueue2.c:1005
 msgid "No file name specified."
