--- a/gst-plugins-base/po/sv.po
+++ b/gst-plugins-base/po/sv.po
@@ -6,10 +6,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: gst-plugins-base 0.10.21.3\n"
+"Project-Id-Version: gst-plugins-base 0.10.22.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-04-15 23:00+0100\n"
-"PO-Revision-Date: 2009-01-12 23:20+0100\n"
+"POT-Creation-Date: 2009-04-21 20:53+0100\n"
+"PO-Revision-Date: 2009-04-19 10:59+0100\n"
 "Last-Translator: Daniel Nylander <po@danielnylander.se>\n"
 "Language-Team: Swedish <tp-sv@listor.tp-sv.se>\n"
 "MIME-Version: 1.0\n"
@@ -232,31 +232,28 @@ msgid "Both autoaudiosink and alsasink elements are missing."
 msgstr "Både autoaudiosink- och alsasink-elementen saknas."
 
 #: gst/playback/gstplaysink.c:962
-#, fuzzy
 msgid "Both autovideosink and xvimagesink elements are not working."
-msgstr "Både autovideosink- och xvimagesink-elementen saknas."
+msgstr "Både autovideosink- och xvimagesink-elementen fungerar inte."
 
 #: gst/playback/gstplaysink.c:1078 gst/playback/gstplaysink.c:1235
 msgid "Custom text sink element is not usable."
-msgstr ""
+msgstr "Anpassat text sink-element är inte användbart."
 
 #: gst/playback/gstplaysink.c:1469
 msgid "No volume control found"
 msgstr "Ingen volymkontroll hittades"
 
 #: gst/playback/gstplaysink.c:1490
-#, fuzzy
 msgid "Both autoaudiosink and alsasink elements are not working."
-msgstr "Både autoaudiosink- och alsasink-elementen saknas."
+msgstr "Både autoaudiosink- och alsasink-elementen fungerar inte."
 
 #: gst/playback/gstplaysink.c:1985
 msgid "Can't play a text file without video."
 msgstr "Kan inte spela upp en textfil utan video."
 
 #: gst/playback/gstplaysink.c:1993
-#, fuzzy
 msgid "Can't play a text subtitles and subpictures."
-msgstr "Kan inte spela upp en textfil utan video."
+msgstr "Kan inte spela upp en undertext och underbilder."
 
 #: gst/playback/gstqueue2.c:1005
 msgid "No file name specified."
