AUTHORS: fix my email

--- a/gst-plugins-base/AUTHORS
+++ b/gst-plugins-base/AUTHORS
@@ -1,7 +1,7 @@
 Erik Walthinsen <omega@temple-baptist.com>
 Matt Howell <mhowell@users.sourceforge.net>
 Brent Bradburn <bbradburn@users.sourceforge.net>
-Wim Taymans <wim.taymans@chello.be>
+Wim Taymans <wim.taymans@gmail.com>
 Richard Boulton <richard@tartarus.org>
 Zaheer Abbas Merali <zaheerabbas at merali dot org>
 David I. Lehn <dlehn@users.sourceforge.net>
