--- a/gst-plugins-base/po/nl.po
+++ b/gst-plugins-base/po/nl.po
@@ -1,13 +1,13 @@
-# translation of gst-plugins-base-0.10.21.3.po to Dutch
+# translation of gst-plugins-base-0.10.22.2.nl.po to Dutch
 # This file is put in the public domain.
 #
 # Freek de Kruijf <f.de.kruijf@hetnet.nl>, 2007, 2008, 2009.
 msgid ""
 msgstr ""
-"Project-Id-Version: gst-plugins-base 0.10.21.3\n"
+"Project-Id-Version: gst-plugins-base 0.10.22.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-04-21 20:53+0100\n"
-"PO-Revision-Date: 2009-01-23 18:09+0100\n"
+"POT-Creation-Date: 2009-05-06 15:55+0100\n"
+"PO-Revision-Date: 2009-05-04 12:58+0200\n"
 "Last-Translator: Freek de Kruijf <f.de.kruijf@hetnet.nl>\n"
 "Language-Team: Dutch <vertaling@vrijschrift.org>\n"
 "MIME-Version: 1.0\n"
@@ -232,31 +232,28 @@ msgid "Both autoaudiosink and alsasink elements are missing."
 msgstr "De elementen 'autoaudiosink' en 'alsasink' ontbreken beide."
 
 #: gst/playback/gstplaysink.c:962
-#, fuzzy
 msgid "Both autovideosink and xvimagesink elements are not working."
-msgstr "De elementen 'autovideosink' en 'xvimagesink' ontbreken beide."
+msgstr "De elementen 'autovideosink' en 'xvimagesink' werken niet."
 
 #: gst/playback/gstplaysink.c:1078 gst/playback/gstplaysink.c:1235
 msgid "Custom text sink element is not usable."
-msgstr ""
+msgstr "De aangepaste element 'tekst-sink' is niet bruikbaar."
 
 #: gst/playback/gstplaysink.c:1469
 msgid "No volume control found"
 msgstr "Geen volume controle gevonden"
 
 #: gst/playback/gstplaysink.c:1490
-#, fuzzy
 msgid "Both autoaudiosink and alsasink elements are not working."
-msgstr "De elementen 'autoaudiosink' en 'alsasink' ontbreken beide."
+msgstr "Beide elementen 'autoaudiosink' en 'alsasink' werken niet."
 
 #: gst/playback/gstplaysink.c:1985
 msgid "Can't play a text file without video."
 msgstr "Kan geen tekstbestand afspelen zonder video."
 
 #: gst/playback/gstplaysink.c:1993
-#, fuzzy
 msgid "Can't play a text subtitles and subpictures."
-msgstr "Kan geen tekstbestand afspelen zonder video."
+msgstr "Kan geen tekst-ondertitels en onder-afbeeldingen en afspelen."
 
 #: gst/playback/gstqueue2.c:1005
 msgid "No file name specified."
